# AutoAPE-challenge3

./: .editorconfig  .gitignore  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: dacon-issue-template.md  dacon.md  kaggle-issue-template.md  kaggle.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: lint.yaml
Google QUEST Q&A Labeling/: QNA_Bert.ipynb  metadata.yaml
dacon/: README.md
dacon/Apartment_actual_price_prediction/: APT.ipynb  README.md  metadata.yaml
dacon/Credit_card_user_delinquency_prediction_AI_contest/: Credit_Card.ipynb  README.md  metadata.yaml
dacon/HAICon2021 산업제어시스템 보안위협 탐지 AI 경진대회(갱신)/: README.md  lstm_seculayer.ipynb  metadata.yaml
dacon/HAICon2021 산업제어시스템 보안위협 탐지 경진대회/: README.md  ics_2.py  metadata.yaml
dacon/KNOW기반 직업 추천 알고리즘 경진대회/: KNOW기반 직업 추천 알고리즘 경진대회.ipynb  README.md  metadata.yaml
dacon/Novel_Author_Classification_AI_Contest/: Novel_Author_Classification_AI_Contest.ipynb  README.md  metadata.yaml
dacon/Solar_Power_Generation_Prediction_AI_Contest/: README.md  Solar_Power_Generation_Prediction_AI_Contest.ipynb  metadata.yaml
dacon/구내식당 식수 인원 예측 AI 경진대회/: README.md  metadata.yaml  구내식당 식수 인원 예측 AI 경진대회.ipynb
dacon/농업 환경 변화에 따른 작물 병해 진단 AI 경진대회/: README.md  metadata.yaml  농업환경변화에_따른_작물병해진단_AI경진대회_inf.ipynb  농업환경변화에_따른_작물병해진단_AI경진대회_train.ipynb
dacon/뉴스 토픽 분류 AI 경진대회/: README.md  metadata.yaml  뉴스 토픽 분류 AI 경진대회.ipynb
dacon/물류 유통량 예측 경진대회/: README.md  metadata.yaml  물류 유통량 예측 경진대회.ipynb  물류 유통량 예측 경진대회.py
dacon/병변 검출 AI 경진대회/: [중앙대 박희수 ai 병변 markdown].md  (+2 more)
src/: README.md
(+386 files in other folders)
