[tool.poetry]
name = "ai_challenges"
version = "0.1.0"
description = ""
authors = ["Lyuha <lyuha@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "ai_challenges", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.1"
pyyaml = "^6.0"


[tool.poetry.scripts]
kaggle = "ai_challenges.kaggle:main"
dacon = "ai_challenges.dacon:main"

[tool.poetry.group.dev.dependencies]
ptpython = {version = "^3.0.20", optional = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
